fix: book-appoint-area style-2 spacing

--- a/css/style.css
+++ b/css/style.css
@@ -5333,8 +5333,11 @@ body.admin-bar .header-menu-area.sticky_menu {
   font-size: 30px;
 }
 
-.elementor-section .consultation-form {
+.elementor-section .appointment-area.style-1 .consultation-form {
   padding-bottom: 0;
+}
+.elementor-section .appointment-area.style-2 .consultation-form .appointment-form .input-box p {
+  margin-bottom: 0;
 }
 
 .about-us-area .section-desc p {
